make java 11 compat